[gd_scene load_steps=5 format=3 uid="uid://kbankgqnncbd"]

[ext_resource type="Script" path="res://ExplosionSingle.gd" id="1_251ry"]
[ext_resource type="Texture2D" uid="uid://dxhyvpxpqni8p" path="res://Assets/tiles/Explosion3.png" id="2_j1sec"]
[ext_resource type="AudioStream" uid="uid://dl4inpefglvgb" path="res://Sounds/Boom.wav" id="3_x6oeh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmps2"]
size = Vector2(14, 14)

[node name="Explosion" type="Area2D"]
script = ExtResource("1_251ry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
shape = SubResource("RectangleShape2D_vmps2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.879996, 0.879999)
texture = ExtResource("2_j1sec")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02

[node name="BoomSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_x6oeh")
panning_strength = 2.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
